apps/scrypt-ecomm/scrypt-backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrypt-backend
  labels:
    app: scrypt-ecomm
    instance: scrypt-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrypt-ecomm
      instance: scrypt-backend
  template:
    metadata:
      labels:
        app: scrypt-ecomm
        instance: scrypt-backend
    spec:
      volumes:
        - name: scrypt-config
          configMap:
            name: scrypt-backend-env
      imagePullSecrets:
        - name: regcred
      containers:
        - name: scrypt-backend-container
          image: ghcr.io/gignative-solutions/scrypt-backend:1.0.0 
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
              name: web
              protocol: TCP
          volumeMounts:
            - name: scrypt-config
              mountPath: "/config/envs"
              readOnly: true
